[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88

[metadata]
name = evoml.framework
version = attr: evoml.framework.VERSION
description = An Open-Source Classification-Based Nature-Inspired Optimization Clustering Framework in Python
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = iot
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package-dir =
    =src
packages = find_namespace:
install_requires =
    pandas
    numpy

# [options.package_data]
# evoml.framework = py.typed

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#   sensors = evoml.framework.EvoCC:show_results